--- a/src/components/bio/Bio.module.scss
+++ b/src/components/bio/Bio.module.scss
@@ -1,5 +1,5 @@
 .bio {
-        margin: 0 auto 20vh;
+        margin: 20vh auto 20vh;
         width: 70%;
         min-height: 100vh;
         position: relative;
@@ -12,7 +12,7 @@
       h2 {
         margin-top: 2rem;
         font-size: clamp(2rem, 5vw, 6rem);
-        font-family: SourceProBold;
+        letter-spacing: 2px;
         color: white;
       }
 
@@ -22,6 +22,7 @@
         font-size: 1rem;
         color: white;
         text-align: center;
+        letter-spacing: 1px;
     }
 
       img {
@@ -33,7 +34,6 @@
         margin: 2rem auto 0;
         padding: 0.25rem 0.5rem;
         color: rgba(255, 255, 255, 0.987);
-        font-family: SourceProLight;
         font-size: 1rem;
         font-weight: 100;
         letter-spacing: 1px;
